src/style.css
@font-face {
    font-family: "Playfair Display";
    src: url("./fonts/PlayfairDisplay-VariableFont_wght.ttf");
}

@font-face {
    font-family: "Roboto";
    src: url("./fonts/Roboto-VariableFont_wdth\,wght.ttf");
}

:root {
    --bg-color: rgb(61, 147, 182);
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto";
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h1,
h2,
h3 {
    font-family: "Playfair Display";
    font-weight: 400;
}

h2 {
    font-size: 2rem;
}

a {
    text-decoration: none;
    color: #000;
}

.container {
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    contain: layout;
    padding: 0 3rem 0 3rem;
}

.bio::before {
    content: "";
    width: 3000px;
    height: 1000px;
    background-color: var(--bg-color);
    position: absolute;
    z-index: -1;
    top: -800px;
    left: -800px;
    transform: rotate(-15deg);
    -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
    -moz-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
    box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
}

.bio {
    margin-top: 100px;
    display: flex;
    background: white;
    gap: 1.5rem;
    -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
    -moz-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
    box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
    padding: 1.5rem;
    max-width: 1000px;
}

.bio-info {
    height: min-content;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.pfp {
    width: 300px;
    height: 300px;
    background-image: url(./images/pfp.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    transform-origin: right;
    transform: scale(1.4);
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.64);
}

.pfp h1 {
    width: 300px;
    color: white;
    position: relative;
    top: 250px;
    text-align: center;
    font-size: 2.5rem;
}

.social-links {
    margin-top: 40px;
    display: flex;
    align-self: flex-end;
}

.social-links a {
    text-align: center;
    width: 40px;
    height: 30px;
}

.projects h2 {
    padding-bottom: 2rem;
}

.projects {
    margin: 200px 0 200px 0;
}

.projects-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
}

.project {
    min-height: 400px;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.64);
}

.project-screenshot {
    width: 100%;
    height: auto;
}

.project-links {
    display: flex;
    gap: 0.3rem;
}

.title {
    display: flex;
    justify-content: space-between;
}

.title,
.project-info {
    padding: 1rem;
}

.svg,
.devicon-twitter-original,
.devicon-linkedin-plain,
.devicon-github-original {
    font-size: 30px;
    width: 30px;
    height: auto;
}

footer {
    padding: 2rem;
    width: 100%;
    background-color: var(--bg-color);
    color: white;
}

.footer-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.footer-info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.email,
.telephone {
    display: flex;
    align-items: center;
    gap: 0.7rem;
}

.footer-links {
    display: flex;
    gap: 1rem;
}

.contact-me-img {
    max-width: 500px;
    width: 100%;
    height: auto;
}

@media (max-width: 768px) {
    .projects-container {
        grid-template-columns: repeat(2, 1fr);
    }
    .bio {
        gap: 0px;
    }
    .pfp {
        max-width: 300px;
        transform-origin: bottom right;
        transform: scale(1) translate(-20%, -30%);
    }
    .pfp h1 {
        top: 15px;
        left: 300px;
    }
    .social-links {
        display: none;
    }
}

@media (max-width: 480px) {
    .projects-container {
        grid-template-columns: 1fr;
    }
    .projects {
        margin-top: 100px;
    }
    .projects h2 {
        text-align: center;
    }
    .footer-container {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .bio {
        margin-top: 20px;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 1rem;
    }
    .pfp {
        transform: scale(1);
    }
    .pfp h1 {
        left: 0;
        top: 250px;
    }
    .bio-info {
        justify-content: center;
        align-items: center;
    }
    .social-links {
        display: flex;
        align-self: center;
    }
    .footer-links {
        align-self: center;
    }
}

